tests/NormalTests/paczka1/fuzzy1/59540165.err
Error in line 11: TOteGtE A9 171,6
Error in line 13: TOteGtE A522 49,4
Error in line 14: TOteGtE S820 27,8
Error in line 8: W0auKz A9 96,5
Error in line 29: TOteGtE A9 43,2
Error in line 34: TOteGtE S820 -1,8
Error in line 37: S792 S820 44,8
